assets/css/style.css
* {
    box-sizing: border-box;
    margin: 0%;
    padding: 0%;
}


body {
    background-image: url(../images/connectwork.png);
    background-color: gray; 
    line-height: 1.6;
}

a {
    text-decoration-line: none;
}

a:hover {
    color:orange;
}

p, label {
    font-family: Arial, 'Helvetica Neue', Helvetica, sans-serif;
    color: #777777;
}

h1, h2 {
    font-family: Georgia, 'Times New Roman', Times, serif;
}

label {
    padding-bottom: 8px;
}

form {
    padding-top: 10px, 12px;
}

input {
    padding: 10px 10px;
    margin-bottom: 10px;
    margin-top: 5px;
}

hr, p, label {
    margin-left: 5%;
    margin-right: 5%;  
}

textarea {
    width: 90%;
    height: 150px;
    box-sizing: border-box;
    padding: 10px 10px;
    margin-top: 5px;
    margin-right: 5%;
    margin-bottom: 5%;
    margin-left: 5%;
}

#submit {
    background-color:#4aaaa5;
    border:none;
    color:#ffffff;
    padding: 10px 20px;
    cursor: pointer;
    margin-left: 5%;
    margin-bottom: 5%;
    font-size: 16px;
}

#email, #full-name {
    width:90%;
    margin-left: 5%;
    margin-right:5%;
}

#name {
    background-color: #4aaaa5;
    color: #ffffff;
    padding: 20px;
    border-color: #cccccc;
    width: 250px;
    text-align: center;
    display: inline-block;
    margin-left: auto;  
}

h2 {
    color: #4aaaa5;
    padding-top: 20px;
    padding-bottom: 20px;
    margin-left: 5%;
}

header {
    
    background-color: #ffffff;
    width: 100%;
    display: block;
}

nav {
    background-color: #ffffff;
    width: 960px;
    margin-left: auto;
    margin-right: auto; 
}

footer {
    position: sticky;
    border-top: 8px solid #4aaaa5;
    text-align: center;
    background-color: #666666;
    margin-top: 50px;
    padding-top: 30px;
}

.nav-list {
    text-decoration-line: none;
    list-style-type: none;
    display: inline;
}

.portfolio, .contact, .about {
    background-color: #ffffff;
    border-color: #dddddd;
    width: 100px;
    padding: 20px;
    float: right;
}

.main-content {
    background-color: #ffffff;
    border-color: #dddddd;
    width: 960px; 
    margin-left: auto;
    margin-right: auto;
    margin-top: 50px;
}

.gallery {
    width:200px;
    height: 200px;
    display: inline-block;
    margin: 50px 40px 50px 40px;  
}

.link-text {
    width:200px;
    text-align: center;
    background-color: #4aaaa5;
    color: #ffffff;
    padding: 5px;
    margin-left:5%;
    position: relative;
    top: -40px;
    float: left;
}

.gallery-img {
    width: 200px;
    height: 200px;
    margin-left:5%;
    float: left;
}

#p1 img {
    float: left;
    margin-top: 20px;
    margin-right: 20px;
    margin-bottom: 20px;
}

#p1 {
    padding-top: 20px;
}

#p2 {
   padding-bottom: 20px;
}

#copyright {
    width: 10px;
    height:10px;
}




@media only screen and (max-width: 980px) {
    header {
        position: static;
        width:100%;
    }

    #name {
        margin-left: 5%;
    }
    
    nav {
        width:100%;
        
    }

    footer {
        width:100%;
    }
    
    .gallery {
        width: 39.65%;
        margin: 5%;
    }

    .gallery-img {
        width:100%;
        margin:0%;
    }

    .link-text {
        width:100%;
        margin: 0%;
    }
    
    .main-content {
        width: 90%;
    }
}

@media only screen and (max-width: 768px) {
    header {
        position: static;
        width:100%;
    }
    
    nav {
        width:100%;
        
    }

    footer {
        width:100%;
    }

    .gallery {
        width: 39.65%;
        margin: 5%;
    }

    .gallery-img {
        width:100%;
        margin:0%;
    }

    .link-text {
        width:100%;
        margin: 0%;
    }
     
    .main-content {
        width: 90%;
    }
    
}

@media only screen and (max-width: 640px) {
    header {
        position: static;
        width:100%;
    }

    nav {
        width:100%;
        text-align: center;    
    }

    footer {
        width:100%;
    }

    .main-content {
        width: 90%;
        margin-top: 20%;
    }

    .gallery {
        width: 80%;
        height:300px;
        margin:10%;
    }

    .gallery-img {
        width:100%;
        height:300px;
        margin:0%;
        
    }

    .link-text {
        width:100%;
        margin: 0%;
    }

    .portfolio, .contact, .about {
        width:33.3%;
    }

    #name {
        width:100%;
        margin-left: 0%;
    }
}

